--- a/QuickShop/manifest.json
+++ b/QuickShop/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "Name": "QuickShop",
   "Author": "Enaium",
-  "Version": "1.9.0",
+  "Version": "1.9.1",
   "Description": "Open shop quickly",
   "UniqueID": "Enaium.QuickShop",
   "EntryDll": "QuickShop.dll",
@@ -13,6 +13,11 @@
     {
       "UniqueID": "Enaium.EnaiumToolKit",
       "MinimumVersion": "1.8.0"
+    },
+    {
+      "UniqueId": "Enaium.ConfigUI",
+      "MinimumVersion": "1.0.0",
+      "IsRequired": false
     }
   ],
   "Custom": {
